--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ dependencies:
   firebase_core_web: ^2.10.0
   flutter_riverpod: ^2.4.9
   cloud_firestore: ^4.13.6
+  geolocator: ^11.0.0
+  file_picker: ^8.0.3
+  firebase_storage: ^11.7.4
+  syncfusion_flutter_charts: ^21.2.4
+  charts_flutter: ^0.12.0
+  intl: ^0.17.0
+
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +75,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 assets:
-  -images/
+  - images
+
+  - assets/images/user.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
